# powerdns

./: .travis.yml  README
dyndnstest/: TODO  habbielog  pdns.conf  sendpacket.pl  sendpackettsig.pl
modules/gmysqlbackend/: gmysqlbackend.cc
modules/gpgsqlbackend/: gpgsqlbackend.cc
modules/gsqlite3backend/: gsqlite3backend.cc
modules/gsqlitebackend/: gsqlitebackend.cc
modules/tinydnsbackend/: Makefile.am  OBJECTFILES  tinydns-dnssec-setup  tinydnsbackend.cc  tinydnsbackend.hh  tinydnssecbackend.cc
pdns/: Makefile.am  common_startup.cc  dns.cc  dns.hh  dnsbackend.cc  dnsbackend.hh  dnspacket.cc  dnsparser.cc  dnsrecords.cc  dnsrecords.hh  dnssecinfra.cc  dnsseckeeper.hh  misc.hh  nameserver.hh  packetcache.cc  packetcache.hh  packethandler.cc  packethandler.hh  pdns.conf-dist  pdnssec.cc  qtype.cc  qtype.hh  resolver.cc  sdig.cc  serialtweaker.cc  sillyrecords.cc  slavecommunicator.cc  tcpreceiver.cc
pdns/docs/: expand  pdns.xml
regression-tests/: .gitignore  cleandig  named.conf  pdns-gmysql.conf  runtests  start-test-stop  test.com  test.dyndns  wtest.com
regression-tests.nobackend/: runtests
regression-tests.nobackend/tinydns-data-check/: expected_result
regression-tests/00dnssec-grabkeys/: command
regression-tests/0dyndns-prereq-all/: command  expected_result  expected_result.narrow  expected_result.nsec3
regression-tests/0dyndns-prereq-nxdomain/: description  sendupdate.pl
regression-tests/0dyndns-prereq-nxrrset/: command
regression-tests/0dyndns-prereq-nxrrset-full/: command  expected_result  expected_result.narrow  expected_result.nsec3
(+147 files in other folders)
